# HERA-TLM

./: .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/ext/: README.md
backend/inc/: cspice_websocket.h  data_manager.h
backend/src/: cspice_websocket.cpp  data_manager.cpp  main.cpp
frontend/: Dockerfile  index.html
frontend/src/: app.js
scripts/: clean_deps.sh  get_deps.sh
